ssl/ingress-ssl.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lamp-ingress-traefik
  namespace: default
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik

  tls:
    - secretName: lamp-tls
      hosts:
        - apache.local
        - php.local

  rules:
    - host: apache.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: apache-lamp
                port:
                  number: 80

    - host: php.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: php-lamp
                port:
                  number: 8080
